--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115972265-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-115972265-1');
+  </script>
+
   <meta charset="utf-8">
   <title>SimpleElo</title>
   <base href="/">
